--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.980.0",
     "@aws-sdk/lib-storage": "^3.980.0",
+    "@aws-sdk/s3-request-presigner": "^3.982.0",
+    "@react-email/components": "^1.0.7",
+    "@react-email/render": "^2.0.4",
     "aws-sdk": "^2.1693.0",
     "axios": "^1.13.4",
     "bullmq": "^5.67.2",
@@ -26,7 +29,10 @@
     "fluent-ffmpeg": "^2.1.3",
     "ioredis": "^5.9.2",
     "pg": "^8.18.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.9.1",
     "typeorm": "^0.3.28",
     "uuid": "^13.0.0"
   },
@@ -35,6 +41,8 @@
     "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^25.2.0",
     "@types/pg": "^8.16.0",
+    "@types/react": "^19.2.11",
+    "@types/react-dom": "^19.2.3",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
