--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
+    "ensure-fonts": "node scripts/ensure-hindi-font.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
