--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 REDIS_URL=rediss://default:<password>@<endpoint>:<port>
 DATABASE_URL=postgresql://<user>:<password>@<host>:<port>/<dbname>
+# Optional: enable health ping to backend (off by default; worker does not need backend to process jobs).
+# HEALTH_CHECK_ENABLED=true
+# API_BASE_URL=http://localhost:3000
 CURRENT_BLOB_STORAGE=s3
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=
